--- a/index.html
+++ b/index.html
@@ -188,19 +188,21 @@
                         </div>
                     </div>
                 </section>
-                <div class="contest-winners">
-                    <p class="contest-winners__text">
-                        <span>Победителями Конкурса</span><br>
-                        будут признаны до 10 участников, чьи проекты наберут наибольшие суммы баллов.
-                    </p>
-                    <p class="contest-winners__text">
-                        Награждение победителей состоится <span>в июне 2022 года</span> в г. Тобольск.
-                    </p>
-                    <div class="membership__box">
-                        <img src="images/pdf.png" alt="pdf">
-                        <a class="contest-winners__membership membership" href="#">
-                            Положение о конкурсе
-                        </a>
+                <div class="container">
+                    <div class="contest-winners">
+                        <p class="contest-winners__text">
+                            <span>Победителями Конкурса</span><br>
+                            будут признаны до 10 участников, чьи проекты наберут наибольшие суммы баллов.
+                        </p>
+                        <p class="contest-winners__text">
+                            Награждение победителей состоится <span>в июне 2022 года</span> в г. Тобольск.
+                        </p>
+                        <div class="membership__box">
+                            <img src="images/pdf.png" alt="pdf">
+                            <a class="contest-winners__membership membership" href="#">
+                                Положение о конкурсе
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <section>
