--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -100,9 +100,9 @@
                     <div id="contest" class="about-competition">
                         <div class="container">
                             <div class="about-competition__inner">
-                                <div class="about-competition__image">
+                                <figure class="about-competition__image">
                                     <img src="images/about.png" alt="about-competition">
-                                </div>
+                                </figure>
                                 <div class="about-competition__info">
                                     <h3 class="about-competition__title title">
                                         О КОНКУРСЕ
@@ -162,9 +162,9 @@
                                     </a>
                                 </div>
 
-                                <div class="application-competition__image">
+                                <figure class="application-competition__image">
                                     <img src="images/konkurs.png" alt="konkurs">
-                                </div>
+                                </figure>
 
                                 <div class="application-competition__idea application-competition__box">
                                     <p class="application-competition__text">
@@ -256,9 +256,9 @@
                                     </div>
                                    
                                 </div>
-                                <div class="educational-program__image">
+                                <figure class="educational-program__image">
                                     <img src="images/learn.png" alt="learn">
-                                </div>
+                                </figure>
                             </div>
                         </div>
                     </div>
@@ -271,27 +271,27 @@
                                 <p class="representatives__text heading">
                                     ИНИЦИАТОР
                                 </p>
-                                <div class="representatives__image">
-                                    <img src="images/initiator.png" alt="ИНИЦИАТОР">
-                                </div>
+                                <figure class="representatives__image">
+                                    <img src="images/initiator.png" alt="Логотип Сибур Тобольск">
+                                </figure>
                             </div>
 
                             <div class="representatives__item">
                                 <p class="representatives__text heading">
                                     ОРГАНИЗАТОР
                                 </p>
-                                <div class="representatives__image">
-                                    <img src="images/organizer.png" alt="ОРГАНИЗАТОР">
-                                </div>
+                                <figure class="representatives__image">
+                                    <img src="images/organizer.png" alt="Логотип ФОНД НАШЕ БУДУЩЕЕ">
+                                </figure>
                             </div>
 
                             <div class="representatives__item">
                                 <p class="representatives__text heading">
                                     ПРИ ПОДДЕРЖКЕ
                                 </p>
-                                <div class="representatives__image">
-                                    <img src="images/support.png" alt="ПРИ ПОДДЕРЖКЕ">
-                                </div>
+                                <figure class="representatives__image">
+                                    <img src="images/support.png" alt="Логотип Администрация города Тобольск">
+                                </figure>
                             </div>
 
                         </div>
